--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -12,8 +12,8 @@
 
     <label for="password">Password:</label>
     <input type="password" name="password" id="password" required><br>
-
     <input type="submit" value="Sign In">
   </form>
+  <button onclick="location.href='/'">Go to Main Dashboard</button>
 </body>
 </html>
