--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -6,6 +6,9 @@
 </head>
 <body>
   <h1>Sign Up</h1>
+  <% if (typeof error !== 'undefined' && error) { %>
+    <p style="color: red;"><%= error %></p>
+  <% } %>
   <form action="/signup" method="POST">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required><br>
@@ -15,8 +18,8 @@
 
     <label for="email">Email:</label>
     <input type="email" name="email" id="email" required><br>
-
     <input type="submit" value="Sign Up">
   </form>
+  <button onclick="location.href='/'">Go to Main Dashboard</button>
 </body>
 </html>
