--- a/views/addHouse.ejs
+++ b/views/addHouse.ejs
@@ -18,6 +18,7 @@
     <label for="photos">Photos:</label>
     <input type="text" name="photos" id="photos" required><br><br>
     <button type="submit">Add House</button>
+    <button onclick="location.href='/houses'">View All Houses</button>
   </form>
 </body>
 </html>
