--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,6 +5,9 @@
 </head>
 <body>
   <h1>Welcome to the Dashboard, <%= user.username %>!</h1>
+  <form action="/houses" method="GET">
+    <button type="submit">View All Houses</button>
+  </form>
   <!-- Add more content specific to the dashboard -->
 </body>
 </html>
