--- a/views/updateHouse.ejs
+++ b/views/updateHouse.ejs
@@ -18,7 +18,7 @@
     <label for="photos">Photos:</label>
     <input type="text" name="photos" id="photos" value="<%= house.photos.join(', ') %>" required><br><br>
     <button type="submit">Update House</button>
-    <a href="/dashboard">Cancel</a>
   </form>
+  <button onclick="location.href='/houses'">View All Houses</button>
 </body>
 </html>
