--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -8,6 +8,8 @@
   <h1>Sign Up</h1>
   <% if (typeof error !== 'undefined' && error) { %>
     <p style="color: red;"><%= error %></p>
+  <% } else if (typeof success !== 'undefined' && success) { %>
+    <p><%= success %></p>
   <% } %>
   <form action="/signup" method="POST">
     <label for="username">Username:</label>
@@ -21,5 +23,6 @@
     <input type="submit" value="Sign Up">
   </form>
   <button onclick="location.href='/'">Go to Main Dashboard</button>
+  <button onclick="location.href='/signin'">Sign In</button>
 </body>
 </html>
