--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,5 +9,7 @@
     <button type="submit">View All Houses</button>
   </form>
   <!-- Add more content specific to the dashboard -->
+  <button onclick="location.href='/'">Logout</button>
+
 </body>
 </html>
